<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".main.widget.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_news"
            android:checked="true"
            android:icon="@mipmap/ic_assessment_white_24dp"
            android:title="@string/navigation_news"/>
        <item
            android:id="@+id/navigation_movies"
            android:icon="@mipmap/ic_movie_white_24dp"
            android:title="@string/navigation_movies"/>
        <item
            android:id="@+id/navigation_picture"
            android:icon="@mipmap/ic_image_white_24dp"
            android:title="@string/navigation_picture"/>
        <item
            android:id="@+id/navigation_joke"
            android:icon="@mipmap/ic_insert_emoticon_white_24dp"
            android:title="@string/navigation_joke"/>

        <item
            android:id="@+id/navigation_menu"
            android:icon="@mipmap/ic_description_white_24dp"
            android:title="@string/navigation_menu"/>
        <item
            android:id="@+id/navigation_weather"
            android:icon="@mipmap/ic_cloud_white_24dp"
            android:title="@string/navigation_weather"/>
        <item
            android:id="@+id/navigation_about"
            android:icon="@mipmap/ic_info_outline_white_24dp"
            android:title="@string/navigation_about"/>
    </group>
</menu>